# budgetah

./: .gitignore  README.md  docker-compose.yaml
backend/: CLAUDE.md  Dockerfile  Makefile  alembic.ini  pyproject.toml  test_api.sh
backend/alembic/: env.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/crud/: __init__.py  budgets.py  categories.py  transactions.py
backend/app/routers/: budgets.py  categories.py  transactions.py
backend/manifests/base/: deployment.yaml  httproute.yaml  kustomization.yaml  pvc.yaml  service.yaml
backend/manifests/overlays/development/: deployment-patch.yaml  httproute-patch.yaml  kustomization.yaml
backend/tests/: conftest.py  test_budgets.py  test_categories.py  test_transactions.py
frontend/: .npmrc  CLAUDE.md  Dockerfile  Makefile  package-lock.json  package.json
frontend/src/app/: error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/src/app/budgets/: actions.ts  page.tsx
frontend/src/app/categories/: actions.ts  page.tsx
frontend/src/app/transactions/: actions.ts  page.tsx
frontend/src/app/transactions/[id]/: page.tsx
frontend/src/components/: budget-form.tsx  budget-list.tsx  category-form.tsx  category-list.tsx  copy-budgets-form.tsx  month-picker.tsx  transaction-form.tsx  transaction-list.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: api.ts
mcp/: Dockerfile  Makefile  pyproject.toml
mcp/app/: main.py
mcp/manifests/base/: deployment.yaml  httproute.yaml  service.yaml
mcp/manifests/overlays/development/: deployment-patch.yaml  httproute-patch.yaml
